Commit para los estilos

--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+    <div id="container">
+        <div id="post"></div>
     <h1>Blog</h1>
-    <p>Parrafo</p>
+    <p>Parrafo increible</p>
+</div>
+</div>
 </body>
 </html>
