Commit de cabecera

--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,11 @@
 <body>
     <div id="container">
         <div id="post"></div>
+        <div id="cabecera">
+
+            Cabecera
+
+        </div>
     <h1>Blog</h1>
     <p>Parrafo increible</p>
 </div>
