--- a/blog.html
+++ b/blog.html
@@ -9,12 +9,13 @@
 </head>
 <body>
     <div id="container">
-        <div id="post"></div>
         <div id="cabecera">
 
-            Cabecera
+            Hyperblog
+            <span id="tagline">Tu blog de confianza</span>
 
         </div>
+        <div id="post">
     <h1>Blog</h1>
     <p>Parrafo increible</p>
 </div>
