Cambios en master

--- a/blog.html
+++ b/blog.html
@@ -12,13 +12,14 @@
         <div id="cabecera">
 
             Hyperblog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog maestro</span>
 
         </div>
         <div id="post">
     <h1>Blog</h1>
     <p>Parrafo increible</p>
     <p>Hola que hace</p>
+    <p>Suscribite y dale like</p>
 </div>
 </div>
 </body>
